# nuclei-segmentation

./: .gitignore  README_old.md  dvc.yaml  environment.yml  pyproject.toml  pytest.ini  setup.py
.dvc/: config
configs/: augmentation.yml  config.yaml
configs/data/: default.yaml
configs/hardware/: m3max.yaml  rtx3080ti.yaml
configs/model/: smp_unet.yaml  unet.yaml
configs/training/: default.yaml
outputs/2024-12-10/23-56-15/.hydra/: hydra.yaml
outputs/2024-12-11/00-10-12/.hydra/: hydra.yaml
outputs/2024-12-11/00-12-32/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-11/00-13-21/.hydra/: hydra.yaml
outputs/2024-12-11/00-17-19/.hydra/: hydra.yaml
outputs/2024-12-11/00-18-31/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-11/00-19-56/.hydra/: hydra.yaml
outputs/2024-12-11/00-20-19/.hydra/: hydra.yaml
scripts/: inspect_data.py  inspect_dataset.py  preprocess_images.py  run_baseline.py  setup_project.py  verify_data.py
src/nuclei_segmentation/: __init__.py  config.py
src/nuclei_segmentation/configs/: train.yaml  validation.py
src/nuclei_segmentation/data/: dataset.py
src/nuclei_segmentation/metrics/: mask_metrics.py
src/nuclei_segmentation/models/: __init__.py  base.py
src/nuclei_segmentation/training/: experiment.py  train.py  train_old.py
src/nuclei_segmentation/utils/: __init__.py  checkpoint_manager.py  data_inspector.py  debug.py  device_utils.py  metrics.py  segmentation_data_inspector.py  visualization.py  wandb_utils.py
tests/: conftest.py  verify_dvc.py  verify_setup.py
tests/models/: test_unet.py
(+130 files in other folders)
